fixed dark mode

--- a/index-home.css
+++ b/index-home.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color: gainsboro;
+    background-color: white;
 }
 .web-container{
     display: flex;
